--- a/index.html
+++ b/index.html
@@ -5,8 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    
+
+    <div id="sideBar">
+
+        <img id="changeColorBtn" src="img/day-and-night.png" width="50px">
+
+        <a href="https://www.linkedin.com/in/jakub-stuba-0b00a4255/" target="_blank">
+            <img src="img/broken-link.png" width="50px" >
+        </a>
+
+        <a href="https://github.com/avolfer" target="_blank">
+            <img src="img/github.png" width="50px">
+        </a>
+
+    </div>
+
+
+    <header>
+        
+    </header>
+
+
+
+
+    <!-- <script src="script.js"></script> -->
+    <script src="changeBackground.js"></script>
   </body>
 </html>
