--- a/index.html
+++ b/index.html
@@ -11,27 +11,30 @@
 
     <div id="sideBar">
 
-        <img id="changeColorBtn" src="img/day-and-night.png" width="50px">
+        <img class="sideBarImage" id="changeColorBtn" src="img/day-and-night.png" width="50px">
 
         <a href="https://www.linkedin.com/in/jakub-stuba-0b00a4255/" target="_blank">
-            <img src="img/broken-link.png" width="50px" >
+            <img class="sideBarImage" src="img/broken-link.png" width="50px" >
         </a>
 
         <a href="https://github.com/avolfer" target="_blank">
-            <img src="img/github.png" width="50px">
+            <img class="sideBarImage" src="img/github.png" width="50px">
         </a>
+
+        <img class="sideBarImage" id="scrollDownProjects" src="img/layers.png" width="50px">
 
     </div>
 
 
     <header>
-        
+        <h1>Jakub Stuba</h1>
+        <h2>Front-end Developer</h2>
     </header>
 
 
 
 
-    <!-- <script src="script.js"></script> -->
+    <script src="script.js"></script>
     <script src="changeBackground.js"></script>
   </body>
 </html>
