--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
             <img class="sideBarImage" src="img/github.png" width="50px">
         </a>
 
-        <img class="sideBarImage" id="scrollDownProjects" src="img/layers.png" width="50px">
 
     </div>
 
@@ -30,6 +29,25 @@
         <h1>Jakub Stuba</h1>
         <h2>Front-end Developer</h2>
     </header>
+
+    <nav>
+        <span id="scrollDownProjects">Projects</span>
+        <span id="scrollDownProjects">About Me</span>
+        <span id="scrollDownProjects">EXP</span>
+        <span id="scrollDownProjects">Contact</span>
+    </nav>
+
+    <article id="techSkills">
+
+    </article>
+
+    <div id="projectSection">
+
+    </div>
+
+    <footer>
+
+    </footer>
 
 
 
