--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <span id="scrollDownProjects">Projects</span>
         <span id="scrollDownProjects">About Me</span>
         <span id="scrollDownProjects">EXP</span>
-        <span id="scrollDownProjects">Contact</span>
+        <span id="scrollDownFooter">Contact</span>
     </nav>
 
     <article id="techSkills">
@@ -46,10 +46,11 @@
     </div>
 
     <footer>
-
+        <p>&copy; Copyright 2023</p>
+        <p>Author: Jakub Stuba</p>
     </footer>
 
-
+    
 
 
     <script src="script.js"></script>
