--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
     <nav>
         <span id="scrollDownProjects">Projects</span>
-        <span id="scrollDownProjects">About Me</span>
-        <span id="scrollDownProjects">EXP</span>
+        <span id="scrollDownBio">About Me</span>
+        <span id="scrollDownExp">EXP</span>
         <span id="scrollDownFooter">Contact</span>
     </nav>
 
