--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Jakub Stuba | Front-end Developer | Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
 
     <div id="sideBar">
-
         <img class="sideBarImage" id="changeColorBtn" src="img/day-and-night.png" width="50px">
 
         <a href="https://www.linkedin.com/in/jakub-stuba-0b00a4255/" target="_blank">
@@ -20,8 +19,6 @@
         <a href="https://github.com/avolfer" target="_blank">
             <img class="sideBarImage" src="img/github.png" width="50px">
         </a>
-
-
     </div>
 
 
@@ -31,29 +28,43 @@
     </header>
 
     <nav>
-        <span id="scrollDownProjects">Projects</span>
-        <span id="scrollDownBio">About Me</span>
-        <span id="scrollDownExp">EXP</span>
-        <span id="scrollDownFooter">Contact</span>
+      <span id="scrollDownSkills">Skills</span>
+      <span id="scrollDownProjects">Projects</span>
+      <span id="scrollDownExp">EXP</span>
+      <span id="scrollDownBio">About Me</span>
+      <span id="scrollDownFooter">Contact</span>
     </nav>
 
-    <article id="techSkills">
-
+    <article id="techSkillsSection">
+      <h3>Skills:</h3>
+        <div>
+          <img src="img/html-5.png" width="150px" alt="HTML5">
+          <img src="img/css-3.png" width="150px" alt="CSS3">
+          <img src="img/js.png" width="150px" alt="Javascript">
+          <img src="img/angular.png" width="150px" alt="Angular">
+          <img src="img/bootstrap.png" width="150px" alt="Bootstrap">
+        </div>
     </article>
 
     <div id="projectSection">
-
+      <p>Test</p>
     </div>
+
+    <article id="expSection">
+      <p>Test</p>
+    </article>
+
+    <article id="bioSection">
+      <p>BIO</p>
+    </article>
 
     <footer>
         <p>&copy; Copyright 2023</p>
         <p>Author: Jakub Stuba</p>
     </footer>
 
-    
 
-
-    <script src="script.js"></script>
+    <script src="scrollScript.js"></script>
     <script src="changeBackground.js"></script>
   </body>
 </html>
