--- a/index.html
+++ b/index.html
@@ -55,7 +55,13 @@
     </article>
 
     <article id="bioSection">
-      <p>BIO</p>
+      <p>
+        Hi, my name is Jakub, from Poland, 18 years old.<br>
+        I learn about Specifically about Front-End,
+        but I also learn basic Back-End(Node.js).<br>
+        I interest Tech Industry and love learning new skills and updating
+        older knowledge.
+      </p>
     </article>
 
     <footer>
