--- a/index.html
+++ b/index.html
@@ -21,19 +21,20 @@
         </a>
     </div>
 
+    <div id="background">
+      <header>
+          <h1>Jakub Stuba</h1>
+          <h2>Front-end Developer</h2>
+      </header>
 
-    <header>
-        <h1>Jakub Stuba</h1>
-        <h2>Front-end Developer</h2>
-    </header>
-
-    <nav>
-      <span id="scrollDownSkills">Skills</span>
-      <span id="scrollDownProjects">Projects</span>
-      <span id="scrollDownExp">EXP</span>
-      <span id="scrollDownBio">About Me</span>
-      <span id="scrollDownFooter">Contact</span>
-    </nav>
+      <nav>
+        <span id="scrollDownSkills">Skills</span>
+        <span id="scrollDownProjects">Projects</span>
+        <span id="scrollDownExp">EXP</span>
+        <span id="scrollDownBio">About Me</span>
+        <span id="scrollDownFooter">Contact</span>
+      </nav>
+    </div>
 
     <article id="techSkillsSection">
       <h3>Skills:</h3>
