--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
       </header>
 
       <nav>
-        <span id="scrollDownSkills">Skills</span>
-        <span id="scrollDownProjects">Projects</span>
-        <span id="scrollDownExp">EXP</span>
-        <span id="scrollDownBio">About Me</span>
-        <span id="scrollDownFooter">Contact</span>
+        <span class="scrollBackground" id="scrollDownSkills">Skills</span>
+        <span class="scrollBackground" id="scrollDownProjects">Projects</span>
+        <span class="scrollBackground" id="scrollDownExp">EXP</span>
+        <span class="scrollBackground" id="scrollDownBio">About Me</span>
+        <span class="scrollBackground" id="scrollDownFooter">Contact</span>
       </nav>
     </div>
 
