--- a/index.html
+++ b/index.html
@@ -45,10 +45,15 @@
           <img src="img/angular.png" width="150px" alt="Angular">
           <img src="img/bootstrap.png" width="150px" alt="Bootstrap">
         </div>
+        <div id="techSkillsSection-galery">
+          <img id="techSkillsSection-certificates" src="img/Web Developer 2023.png" width="400em" alt="Web Developer 2023">
+          <img id="techSkillsSection-certificates" src="img/CompTIA a+.png" width="400em" alt="CompTIA a+">
+          <img id="techSkillsSection-certificates" src="img/IT fundamental.png" width="400em" alt="IT fundamental">
+        </div>
     </article>
 
     <div id="projectSection">
-      <p>Test</p>
+      <p>Section in progress!!</p>
     </div>
 
     <article id="expSection">
