--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
     <article id="techSkillsSection">
       <h3>Skills:</h3>
         <div>
-          <img src="img/html-5.png" width="150px" alt="HTML5">
-          <img src="img/css-3.png" width="150px" alt="CSS3">
-          <img src="img/js.png" width="150px" alt="Javascript">
-          <img src="img/angular.png" width="150px" alt="Angular">
-          <img src="img/bootstrap.png" width="150px" alt="Bootstrap">
+          <img src="img/html-5.png" width="150px" alt="HTML5" style="max-width:100%;height:auto;">
+          <img src="img/css-3.png" width="150px" alt="CSS3" style="max-width:100%;height:auto;">
+          <img src="img/js.png" width="150px" alt="Javascript" style="max-width:100%;height:auto;">
+          <img src="img/angular.png" width="150px" alt="Angular" style="max-width:100%;height:auto;">
+          <img src="img/bootstrap.png" width="150px" alt="Bootstrap" style="max-width:100%;height:auto;">
         </div>
         <div id="techSkillsSection-galery">
-          <img id="techSkillsSection-certificates" src="img/Web Developer 2023.png" width="400em" alt="Web Developer 2023">
-          <img id="techSkillsSection-certificates" src="img/CompTIA a+.png" width="400em" alt="CompTIA a+">
-          <img id="techSkillsSection-certificates" src="img/IT fundamental.png" width="400em" alt="IT fundamental">
+          <img id="techSkillsSection-certificates" src="img/Web Developer 2023.png" width="400em" alt="Web Developer 2023" style="max-width:100%;height:auto;">
+          <img id="techSkillsSection-certificates" src="img/CompTIA a+.png" width="400em" alt="CompTIA a+" style="max-width:100%;height:auto;">
+          <img id="techSkillsSection-certificates" src="img/IT fundamental.png" width="400em" alt="IT fundamental" style="max-width:100%;height:auto;">
         </div>
     </article>
 
