--- a/index.html
+++ b/index.html
@@ -42,8 +42,12 @@
           <img src="img/html-5.png" width="150px" alt="HTML5" style="max-width:100%;height:auto;">
           <img src="img/css-3.png" width="150px" alt="CSS3" style="max-width:100%;height:auto;">
           <img src="img/js.png" width="150px" alt="Javascript" style="max-width:100%;height:auto;">
-          <img src="img/angular.png" width="150px" alt="Angular" style="max-width:100%;height:auto;">
-          <img src="img/bootstrap.png" width="150px" alt="Bootstrap" style="max-width:100%;height:auto;">
+          <img src="img/python.png" width="150px" alt="Pyhton" style="max-width:100%;height:auto;">
+          <img src="img/linux.png" width="150px" alt="Linux" style="max-width:100%;height:auto;">
+          <img src="img/windows.png" width="150px" alt="Windows" style="max-width:100%;height:auto;">
+          <img src="img/oracle.png" width="150px" alt="Oracle Virtual Machine(VirtualBox)" style="max-width:100%;height:auto;">
+          <img src="img/gnu-bash.png" width="150px" alt="Bash" style="max-width:100%;height:auto;">
+          <img src="img/icons8-powershell-480.png" width="150px" alt="Powershell" style="max-width:100%;height:auto;">
         </div>
         <div id="techSkillsSection-galery">
           <img id="techSkillsSection-certificates" src="img/Web Developer 2023.png" width="400em" alt="Web Developer 2023" style="max-width:100%;height:auto;">
@@ -62,11 +66,14 @@
 
     <article id="bioSection">
       <p>
-        Hi, my name is Jakub, from Poland, 18 years old.<br>
-        I learn about Specifically about Front-End,
-        but I also learn basic Back-End(Node.js).<br>
+        Hi, my name is Jakub, from Poland, 19 years old.<br>
+        I learn about Cybersecurity & Network Administration,
+        I can work with:.<br>
+        HTML5, CSS3, Javascript, Python3.X, Linux(Kali linux, Ubuntu),<br>
+        Windows (8, 8.1, 10, 11, Windows Server 2022), Virtual Machine(Oracle VirtualBox),<br>
+        Bash and Powershell<br>
         I interest Tech Industry and love learning new skills and updating
-        older knowledge.
+        knowledge.
       </p>
     </article>
 
