--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <div id="background">
       <header>
           <h1>Jakub Stuba</h1>
-          <h2>Front-end Developer</h2>
+          <h2>
+            Ethical Hacker | IT Administrator
+          </h2>
       </header>
 
       <nav>
@@ -57,7 +59,26 @@
     </article>
 
     <div id="projectSection">
-      <p>Section in progress!!</p>
+      <p>My projects:</p>
+
+      <div class="projectSection-project">
+        <a href="https://github.com/avolfer/port-scanning" target="_blank">
+          <p>Port Scanning</p>
+        </a>
+      </div>
+
+      <div class="projectSection-project">
+        <a href="https://github.com/avolfer/port-scanning" target="_blank">
+          <p>Port Scanning</p>
+        </a>
+      </div>
+
+      <div class="projectSection-project">
+        <a href="https://github.com/avolfer/port-scanning" target="_blank">
+          <p>Port Scanning</p>
+        </a>
+      </div>
+
     </div>
 
     <article id="expSection">
