--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
       </div>
 
       <div class="projectSection-project">
-        <a href="https://github.com/avolfer/port-scanning" target="_blank">
-          <p>Port Scanning</p>
+        <a href="https://github.com/avolfer/DDOS-script" target="_blank">
+          <p>DDOS Attack Script</p>
         </a>
       </div>
 
