--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <header>
           <h1>Jakub Stuba</h1>
           <h2>
-            Ethical Hacker | IT Administrator
+            Programmer
           </h2>
       </header>
 
@@ -88,11 +88,11 @@
     <article id="bioSection">
       <p>
         Hi, my name is Jakub, from Poland, 19 years old.<br>
-        I learn about Cybersecurity & Network Administration,
+        I learn about Front-end & Data Analyst,
         I can work with:.<br>
-        HTML5, CSS3, Javascript, Python3.X, Linux(Kali linux, Ubuntu),<br>
-        Windows (8, 8.1, 10, 11, Windows Server 2022), Virtual Machine(Oracle VirtualBox),<br>
-        Bash and Powershell<br>
+        Excel, PostgreSQL, HTML5, CSS3, Javascript, Python3.X, Linux(Kali linux, Ubuntu),<br>
+        Windows (8, 8.1, 10, 11), Virtual Machine(Oracle VirtualBox),<br>
+        Bash and Powershell.<br>
         I interest Tech Industry and love learning new skills and updating
         knowledge.
       </p>
