--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
     <article id="techSkillsSection">
       <h3>Skills:</h3>
         <div>
+          <img src="img/icons8-excel-240.png" width="150px" alt="Excel" style="max-width:100%;height:auto;">
+          <img src="img/icons8-postgresql-480.png" width="150px" alt="PostgreSQL" style="max-width:100%;height:auto;">
           <img src="img/html-5.png" width="150px" alt="HTML5" style="max-width:100%;height:auto;">
           <img src="img/css-3.png" width="150px" alt="CSS3" style="max-width:100%;height:auto;">
           <img src="img/js.png" width="150px" alt="Javascript" style="max-width:100%;height:auto;">
