--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div id="techSkillsSection-galery">
           <img id="techSkillsSection-certificates" src="img/Web Developer 2023.png" width="400em" alt="Web Developer 2023" style="max-width:100%;height:auto;">
           <img id="techSkillsSection-certificates" src="img/CompTIA a+.png" width="400em" alt="CompTIA a+" style="max-width:100%;height:auto;">
-          <img id="techSkillsSection-certificates" src="img/IT fundamental.png" width="400em" alt="IT fundamental" style="max-width:100%;height:auto;">
+          <img id="techSkillsSection-certificates" src="img/UC-4518f623-028c-4ba1-a01c-767184f89f25.jpg" width="400em" alt="Python bootcamp" style="max-width:100%;height:auto;">
         </div>
     </article>
 
