--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
         <span class="scrollBackground" id="scrollDownProjects">Projects</span>
         <span class="scrollBackground" id="scrollDownExp">EXP</span>
         <span class="scrollBackground" id="scrollDownBio">About Me</span>
-        <span class="scrollBackground" id="scrollDownFooter">Contact</span>
       </nav>
     </div>
 
@@ -82,7 +81,9 @@
     </div>
 
     <article id="expSection">
-      <p>Test</p>
+      <h4>Experience:</h4><br>
+      <p>Front-end Developer (May 2022 - Dec 2022 [8 mos])</p><br>
+      <p>Computer Technical (May 2022 - Aug 2022 [4 mos])</p>
     </article>
 
     <article id="bioSection">
